Simplify project structure, install and use

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -9,17 +9,12 @@ DIND_HTTPS_PROXY=http://tinyproxy-dind:8888
 DIND_NO_PROXY=localhost,127.0.0.1,::1,docker,tinyproxy-devcontainer,tinyproxy-dind
 
 # Upstream proxy configuration (optional)
-# Tinyproxy will forward requests through upstream proxy if configured
-# Option 1: SOCKS5 proxy on host machine (uncomment to use)
-#UPSTREAM_SOCKS5=host.docker.internal:8900
+# Format: protocol://host:port where protocol is 'socks5' or 'http'
+#UPSTREAM_PROXY=socks5://host.docker.internal:8900
+#UPSTREAM_PROXY=http://host.docker.internal:3128
 
-# Option 2: HTTP proxy (uncomment to use)
-#UPSTREAM_HTTP=host.docker.internal:3128
-
-# Option 3: Generic upstream proxy (uncomment and configure)
-#UPSTREAM_PROXY_TYPE=socks5
-#UPSTREAM_PROXY_HOST=host.docker.internal
-#UPSTREAM_PROXY_PORT=1080
+# Domains that bypass upstream proxy (optional, comma-separated)
+#NO_UPSTREAM=github.com,gitlab.com
 
 # Claude Code configuration
 CLAUDE_CONFIG_DIR=/home/claude/.claude
