--- a/images/tinyproxy-dind/Dockerfile
+++ b/images/tinyproxy-dind/Dockerfile
@@ -5,9 +5,9 @@ RUN apk add --no-cache tinyproxy
 # Create tinyproxy user if it doesn't exist
 RUN adduser -D -H -s /bin/false tinyproxy || true
 
-# Copy configuration file
-COPY tinyproxy.conf /etc/tinyproxy/tinyproxy.conf
-COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+# Copy configuration files from tinyproxy-dind directory
+COPY images/tinyproxy-dind/tinyproxy.conf /etc/tinyproxy/tinyproxy.conf
+COPY images/tinyproxy-dind/entrypoint.sh /usr/local/bin/entrypoint.sh
 
 RUN chmod +x /usr/local/bin/entrypoint.sh && \
     mkdir -p /var/log/tinyproxy && \
