Move initialize.sh, update example and repo .devcontainer

--- a/.devcontainer.example/.env.example
+++ b/.devcontainer.example/.env.example
@@ -2,7 +2,7 @@
 # Only the minimal required settings that users need to customize
 
 # Project name - used for container/volume naming (alphanumeric, hyphens only)
-PROJECT_NAME=ai-agents-sandbox
+PROJECT_NAME=myproject
 
 # Optional: Upstream proxy for external connections
 # Formats: socks5://host:port or http://host:port
