--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
-FROM claudecode/devcontainer:latest
+ARG BASE_IMAGE=claudecode/devcontainer:1.0.0
+FROM ${BASE_IMAGE}
 COPY whitelist.txt /usr/local/etc/
 USER claude
