--- a/.devcontainer/override.yaml
+++ b/.devcontainer/override.yaml
@@ -4,15 +4,15 @@
 services:
   # Override image tags to use version 1.0.0
   tinyproxy-devcontainer:
-    image: tinyproxy-whitelist:1.0.0
+    image: ai-sandbox/tinyproxy-whitelist:1.0.0
   
   tinyproxy-dind:
-    image: tinyproxy-dind:1.0.0
+    image: ai-sandbox/tinyproxy-dind:1.0.0
   
   devcontainer:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        BASE_IMAGE: claudecode/devcontainer:1.0.0
-    image: ai-agents-sandbox-devcontainer:1.0.0
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#      args:
+#        BASE_IMAGE: ai-sandbox/devcontainer:1.0.0
+    image: ai-sandbox/devcontainer:1.0.0
