--- a/.devcontainer.example/devcontainer.json
+++ b/.devcontainer.example/devcontainer.json
@@ -1,27 +1,14 @@
 {
-  "name": "My Project DevContainer",
+  "name": "${localWorkspaceFolderBasename} - Claude Code Sandbox",
   "dockerComposeFile": "docker-compose.yaml",
   "service": "devcontainer",
   "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
   "containerUser": "claude",
   "updateRemoteUserUID": false,
-  // No initialization needed - copy .devcontainer.example/ to your project
-  // IDEs handle container lifecycle automatically
+  "initializeCommand": "bash -c 'if [[ -f .devcontainer/init-project.sh ]]; then .devcontainer/init-project.sh; elif command -v ai-sbx-init-project >/dev/null 2>&1; then ai-sbx-init-project \"${localWorkspaceFolder}\"; fi'",
   "postCreateCommand": "/home/claude/scripts/non-root-post-create.sh",
   "remoteEnv": {
     "PROJECT_NAME": "${localWorkspaceFolderBasename}"
-  },
-  "features": {},
-  "customizations": {
-    "vscode": {
-      "settings": {
-        "terminal.integrated.defaultProfile.linux": "zsh"
-      },
-      "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance"
-      ]
-    }
   }
 }
