--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,2 @@
-ARG BASE_IMAGE=claudecode/devcontainer:1.0.0
-FROM ${BASE_IMAGE}
-COPY whitelist.txt /usr/local/etc/
+FROM claudecode/devcontainer:1.0.0
 USER claude
