--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,16 @@
 {
   "name": "${localWorkspaceFolderBasename} - Claude Code Sandbox",
-  "dockerComposeFile": "docker-compose.yaml",
+  "dockerComposeFile": ["local.project.yaml",
+    "/usr/local/share/claude-devcontainer/docker-compose.base.yaml",
+    "override.yaml"],
   "service": "devcontainer",
   "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
   "containerUser": "claude",
   "updateRemoteUserUID": false,
-  "initializeCommand": "bash -c 'if [[ -f ./init-project.sh ]]; then ./init-project.sh; elif command -v ai-sbx-init-project >/dev/null 2>&1; then ai-sbx-init-project \"${localWorkspaceFolder}\"; fi'",
+  "initializeCommand": "bash -c 'printf \"PROJECT_DIR=%q\\n\" \"${localWorkspaceFolder}\" >> .env; if [[ -f ./init-project.sh ]]; then ./init-project.sh; elif command -v ai-sbx-init-project >/dev/null 2>&1; then ai-sbx-init-project \"${localWorkspaceFolder}\"; fi'",
   "postCreateCommand": "/home/claude/scripts/non-root-post-create.sh",
   "remoteEnv": {
-    "PROJECT_NAME": "${localWorkspaceFolderBasename}"
+    "PROJECT_NAME": "${localWorkspaceFolderBasename}",
   }
 }
