--- a/.devcontainer/override.yaml
+++ b/.devcontainer/override.yaml
@@ -1,18 +1,20 @@
-# Local project-specific overrides for the ai_agents_sandbox project
-# This file overrides specific settings from the system-installed base
-
 services:
-  # Override image tags to use version 1.0.0
   tinyproxy-devcontainer:
     image: ai-sandbox/tinyproxy-whitelist:1.0.0
+    environment:
+      USER_WHITELIST_DOMAINS: gitlab.com,youtrack.com
   
   tinyproxy-dind:
     image: ai-sandbox/tinyproxy-dind:1.0.0
-  
+    environment:
+      USER_WHITELIST_DOMAINS: hub.docker.com
+
   devcontainer:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#      args:
-#        BASE_IMAGE: ai-sandbox/devcontainer:1.0.0
-    image: ai-sandbox/devcontainer:1.0.0
+    # Option 1: Use environment variable from .env (RECOMMENDED)
+    # This works because PROJECT_DIR is set in .env
+    build:
+      context: .
+      dockerfile: Dockerfile
+    
+    # Option 2: Use pre-built image (no build needed)
+    # image: ai-sandbox/devcontainer:1.0.0
