--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,13 +2,14 @@
   "name": "${localWorkspaceFolderBasename} - Claude Code Sandbox",
   "dockerComposeFile": ["local.project.yaml",
     "/usr/local/share/ai-agents-sandbox/docker-compose.base.yaml",
-    "override.yaml"],
+    "override.user.yaml",
+  ],
   "service": "devcontainer",
   "workspaceFolder": "/workspace",
   "shutdownAction": "stopCompose",
   "containerUser": "claude",
   "updateRemoteUserUID": false,
-  "initializeCommand": "bash -c 'printf \"PROJECT_DIR=%q\\n\" \"${localWorkspaceFolder}\" >> .env; if [[ -f ./init-project.sh ]]; then ./init-project.sh; elif command -v ai-sbx-init-project >/dev/null 2>&1; then ai-sbx-init-project \"${localWorkspaceFolder}\"; fi'",
+  "initializeCommand": ".devcontainer/init-project.sh \"${localWorkspaceFolder}\"",
   "postCreateCommand": "/home/claude/scripts/non-root-post-create.sh",
   "remoteEnv": {
     "PROJECT_NAME": "${localWorkspaceFolderBasename}",
