--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -1,4 +1,5 @@
 include:
   - path:
       - /usr/local/share/ai-agents-sandbox/docker-compose.base.yaml
+      - override.docker-proxy.yaml
       - override.user.yaml
