Update preferred IDE script

--- a/.devcontainer.example/.env.example
+++ b/.devcontainer.example/.env.example
@@ -10,7 +10,7 @@ PROJECT_DIR=/path/to/my-project
 COMPOSE_PROJECT_NAME=my-project
 
 # ============================================================================
-# PROXY CONFIGURATION (optional)
+# PROXY CONFIGURATION (optional - can also be in .user.env)
 # ============================================================================
 
 # Upstream proxy for corporate environments
