Add copy of user.init.sh script for custom settings in the worktree

--- a/host/templates/docker-compose.base.yaml
+++ b/host/templates/docker-compose.base.yaml
@@ -79,9 +79,9 @@ services:
       - ${HOME}/.p10k.zsh:/host/.p10k.zsh:ro
       - ${HOME}/.claude/projects/:/home/claude/.claude/projects
       - ${HOME}/.ai_agents_sandbox/notifications:/home/claude/.ai_agents_sandbox/notifications
-      
+      - ${HOME}/.codex:/home/claude/.codex
+
       # Persistent state volumes
-      - codex:/home/claude/.codex
       - cache:/home/claude/.cache
       
       # IDE cache for JetBrains
@@ -109,8 +109,6 @@ volumes:
     name: ${PROJECT_NAME:-project}-proxy-devcontainer-logs
   claude-code-config:
     name: ${PROJECT_NAME:-project}-claude-code-config
-  codex:
-    name: ${PROJECT_NAME:-project}-codex
   cache:
     name: ${PROJECT_NAME:-project}-cache
   jb-cache:
